DELETING API KEY

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
 
 		
 		<div id="snipcart" 
-			 data-api-key="MDllZTAxMzktMTZkMS00N2RjLTgxODctZjc2MjI3ZmVjN2UyNjM4ODk0MjM5MDYzNzAwMjc1" 
+			 data-api-key="INSERT-API-KEY-HERE" 
 			 data-config-modal-style="side"
 			 data-config-add-product-behavior="none"
 			 hidden>
@@ -37,7 +37,7 @@ const { title } = Astro.props;
 		<!-- Configuración de Snipcart -->
 		<script>
 			window.SnipcartSettings = {
-				publicApiKey: "MDllZTAxMzktMTZkMS00N2RjLTgxODctZjc2MjI3ZmVjN2UyNjM4ODk0MjM5MDYzNzAwMjc1", // CAMBIA ESTO por tu API key real
+				publicApiKey: "INSERT-API-KEY-HERE", // CAMBIA ESTO por tu API key real
 				loadStrategy: "on-user-interaction",
 				modalStyle: "side",
 				currency: "usd",
