--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -451,35 +451,54 @@ import App4 from '../assets/app4.webp'
     }
 
     .feature-item {
-      padding: 30px 20px;
+      padding: 30px 50px;
     }
 
     .feature-text h2 {
-      font-size: 1.9rem;
+      font-size: 3rem;
     }
 
     .feature-text p {
-      font-size: 1.1rem;
+      font-size: 1.5rem;
     }
 
     .app-header h2 {
-      font-size: 1.9rem;
+      font-size: 3rem;
+    }
+
+        .app-header p {
+      font-size: 1.5rem;
     }
 
     .app-feature {
-      padding: 30px 20px;
+      padding: 30px 50px;
     }
 
-    .app-info-content {
-      padding: 30px 20px;
+    .app-feature p {
+      font-size: 1.5rem;
+      
     }
+
+.app-info-content {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 40px;
+  justify-content: center;  /* Centra el grid horizontalmente */
+  text-align: center;       /* Centra el texto dentro de los elementos */
+}
 
     .app-info-text h3 {
-      font-size: 1.8rem;
+      font-size: 2rem;
     }
 
     .app-info-text h4 {
+      font-size: 1.7rem;
+    }
+
+        .app-info-text p {
       font-size: 1.5rem;
     }
+
+ 
   }
 </style>
