--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -273,6 +273,11 @@
 }
 
 @media (max-width: 768px) {
+
+    .social-links {
+        justify-content: center
+    }
+
     .footer {
         padding: 120px 0 60px; /* mantengo padding-top aumentado en responsive */
     }
@@ -310,6 +315,11 @@
         flex-wrap: wrap;
         justify-content: center;
     }
+
+    .footer-section h4 {
+        margin-top: 40px;
+    }
+
 }
 
 @media (max-width: 480px) {
@@ -345,6 +355,7 @@
     }
     
     .footer-section h4 {
+        margin-top: 40px;
         font-size: 1.3rem;
     }
 }
