--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -232,6 +232,32 @@ import CharismaRing from '../assets/charismaring.png'
 
 // Responsive para modal
 @media (max-width: 768px) {
+
+    .h1-title {
+        font-size: 3rem;
+    }
+
+    .l-subtitle {
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    .h2-title {
+        font-size: 3rem;
+        text-align: center;
+    }
+
+    .button {
+        padding: 0px 18px;
+        font-size: 1.1rem;
+    }
+
+    p {
+        font-size: 1.4rem;
+        margin-top: 35px;
+    }
+
+
   .image-modal {
     &.active {
       padding: 10px;
