--- a/src/pages/product.astro
+++ b/src/pages/product.astro
@@ -1173,14 +1173,52 @@ import Secure from '../assets/lock.svg';
 		}
 	}
 
-	@media (max-width: 768px) {
+	@media (max-width: 488px) {
 		.product-hero {
+            text-align: center;
+			padding: 20px;
+
 			.hero-title {
-			
+			margin-top: 90px;
 			}
 
 			.hero-subtitle {
-				font-size: 1.1rem;
+				font-size: 1.4rem;
+			}
+
+            .cta-button {
+				margin-top: 20px;
+				margin-bottom: 40px !important;
+			}
+
+			.feature-item {
+			justify-content: center;
+			}
+		}
+
+		.section-header p {
+			padding: 20px;
+		}
+
+		.detail-content {
+			text-align: center;
+
+			.feature-list li {
+				justify-content: center;
+			}
+
+		}
+
+		.feature-highlights li {
+			justify-content: center;
+		}
+
+		.how-it-works {
+			padding: 30px;
+
+			h2 {
+				margin-top: 70px;
+				margin-bottom: 30px;
 			}
 		}
 
@@ -1236,6 +1274,35 @@ import Secure from '../assets/lock.svg';
 				margin-top: 60px;
 			}
 		}
+
+			.scientific-backing {
+				padding: 30px;
+				padding-bottom: 70px;
+
+				h2 {
+					margin-top: 60px;
+				}
+				
+			}
+
+			.final-cta {
+			
+				h2 {
+					padding: 20px;
+					margin-bottom: 0px;
+				}
+
+				p {
+					margin-top: 0px;
+					padding: 30px;
+				}
+
+				button {
+					font-size: 1rem !important;
+				}
+			}
+
+
 	}
 
 					.feature-icon-mini2 {
@@ -1248,5 +1315,10 @@ import Secure from '../assets/lock.svg';
 						margin-bottom: 10px;
 					}
 
+
+	@media (max-width: 768px) {
+
+
+	}
 
 </style>
