--- a/src/components/Brief.astro
+++ b/src/components/Brief.astro
@@ -173,7 +173,39 @@ Wear it. Run a Scan. Feel the Difference.<br><br>
   @media (max-width:700px) {
     .brief-tab{
         margin-left: 20px;
+        padding-right: 40px;
     }
+
+        .button {
+         display: block;
+        margin: 0 auto;
+        padding: 0px 18px;
+      }
+
+      .h2-title {
+        text-align: center;
+        font-size: 3rem;
+      }
+
+      p {
+        text-align: center;
+        font-size: 1.5rem;
+      }
+
+      .s-paragraph {
+        padding-top: 10px;
+        text-align: left;
+      }
+    
   }
+
+
+  @media (max-width: 1024px) and (min-width: 701px) {
+          .button {
+        padding: 0px 18px;
+      }
+  }
+
+
 }
  </style>
