--- a/src/components/Customers.astro
+++ b/src/components/Customers.astro
@@ -133,8 +133,34 @@ import Stars from '../assets/stars.svg'
       &:nth-child(4){ bottom: 0%; right: 20%; }
     }
   }
+
+@media (max-width: 1024px) and (min-width: 701px) {
+  .button {
+    padding: 0px 20px;
+  }
+}
+
   @media (max-width:700px){
     .circular-image img{ display: none; }
+
+  .container {
+  padding: 10px;
+  }
+
+    .h1-title{
+      font-size: 3rem; 
+    }
+
+     p {
+      font-size: 1.4rem; 
+      padding: 20px;
+     }
+
+    .button {
+        padding: 0px 18px;
+        font-size: 1rem;
+    }
+
   }
 }
 
