--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -115,7 +115,7 @@ import heroBg from '../assets/hero-bg.jpg';
 
       p {
         font-size: 1.6rem; // más legible en móvil
-        
+        padding: 0px 25px;
       }
     }
     
