--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,13 +12,21 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Discover revolutionary healing devices powered by cutting-edge bioresonance technology. Enhance your well-being naturally.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
+		<meta name="robots" content="index, follow" />
+        <meta name="author" content="Anywhere Healing" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 		
 		<!-- Snipcart CSS -->
 		<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.7.1/default/snipcart.css" />
+
+		<meta property="og:title" content="{title}" />
+		<meta property="og:description" content="Discover revolutionary healing devices powered by bioresonance technology." />
+		<meta property="og:image" content="../assets/logo.png" />
+		<meta property="og:url" content="https://anywherehealing.com" />
+
 	</head>
 	<body>
 		<slot />
