--- a/src/pages/science.astro
+++ b/src/pages/science.astro
@@ -261,6 +261,8 @@ import Instagram from '../assets/ig.png';
 		font-weight: 500;
 		display: inline-block;
 		margin-bottom: 20px;
+		margin-top: 35px;
+		margin-bottom: 50px;
 	}
 
 	h1 {
@@ -487,7 +489,7 @@ import Instagram from '../assets/ig.png';
 		font-size: 14px;
 		font-weight: 500;
 		display: inline-block;
-		margin-bottom: 20px;
+		margin-bottom: 50px;
 	}
 
 	h2 {
