adding rejuvena pod page and adding rejuvena in homepage

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -266,6 +266,8 @@
 
 /* Responsive Design */
 @media (max-width: 1024px) {
+    text-align: center;
+
     .footer-content {
         grid-template-columns: 1fr 1fr;
         gap: 20px; /* menos separación en tablets */
@@ -280,6 +282,7 @@
 
     .footer {
         padding: 120px 0 60px; /* mantengo padding-top aumentado en responsive */
+        
     }
     
     .footer-content {
