--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,7 @@ import Logo from '../assets/logo.png'
         <nav>
             <a href="/science">About</a>
             <a href="/product">Product</a>
+            <a href="/rejuvenapod">Rejuvena Pod</a>
             <a href="/contact">Contact</a>
         </nav>
 
@@ -37,6 +38,7 @@ import Logo from '../assets/logo.png'
         <div class="mobile-menu-content">
             <a href="/science">About</a>
             <a href="/product">Product</a>
+            <a href="/rejuvenapod">Rejuvena Pod</a>
             <a href="/contact">Contact</a>
             <a href="/order">
                 <button class="button button-primary u-full-width">ORDER NOW</button>
