fixing deployment bugs

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -636,10 +636,10 @@ import ClinicalResult2 from '../assets/clinical-result-2.jpg'
   // Gallery functionality with optimized code
   class ImageGallery {
     constructor() {
-      this.images = [
-        '/src/assets/clinical-result-1.jpg',
-        '/src/assets/clinical-result-2.jpg'
-      ];
+this.images = [
+  ClinicalResult1.src,
+  ClinicalResult2.src
+];
       this.currentIndex = 0;
       this.modal = null;
       this.init();
