--- a/src/pages/order.astro
+++ b/src/pages/order.astro
@@ -826,7 +826,7 @@ import Footer from '../components/Footer.astro';
 				background: #2596be;
 				color: white;
 				border: none;
-
+                padding: 0px 0px;
 				border-radius: 50px;
 				font-size: 1.1rem;
 				font-weight: 600;
