fixing deployment bugs

--- a/src/pages/order.astro
+++ b/src/pages/order.astro
@@ -156,8 +156,8 @@ import Footer from '../components/Footer.astro';
 
 					<div class="purchase-section">
 						<button class="buy-button primary shopify-add-item"
-						data-variant-id="51670434054328"
-						data-product-title="Alpha + Charisma Bundle"
+						data-variant-id="51670385066616"
+						data-product-title="Alpha Wearable + App Subscription"
 						data-price="399.00">
 						Order Alpha + Charisma - $499
 						</button>
